--- a/MyWebsiteRazor/Areas/Identity/Pages/Account/Register.cshtml
+++ b/MyWebsiteRazor/Areas/Identity/Pages/Account/Register.cshtml
@@ -2,6 +2,7 @@
 @model RegisterModel
 @{
     ViewData["Title"] = "Register";
+    Layout = "_IdentityLayout";
 }
 
 <div class="app-content content">
@@ -56,7 +57,7 @@
                                                 <button type="submit" class="btn btn-primary glow position-relative w-100">ثبت نام<i id="icon-arrow" class="bx bx-left-arrow-alt"></i></button>
                                             </form>
                                             <hr>
-                                            <div class="text-center"><small class="mr-25">حساب کاربری دارید؟</small><a asp-area="Identity" asp-page="/account/Register"><small>ورود</small> </a></div>
+                                            <div class="text-center"><small class="mr-25">حساب کاربری دارید؟</small><a asp-area="Identity" asp-page="/Account/Login"><small>ورود</small> </a></div>
                                         </div>
                                     </div>
                                 </div>
