--- a/MyWebsiteRazor/Pages/Shared/_Layout.cshtml
+++ b/MyWebsiteRazor/Pages/Shared/_Layout.cshtml
@@ -196,7 +196,7 @@
                                 </a>
                                 <div class="dropdown-menu pb-0">
                                     <a class="dropdown-item" href="page-user-profile.html"><i class="bx bx-user mr-50"></i> ویرایش پروفایل</a><a class="dropdown-item" href="app-email.html"><i class="bx bx-envelope mr-50"></i> صندوق ورودی من</a><a class="dropdown-item" href="app-todo.html"><i class="bx bx-check-square mr-50"></i> وظیفه</a><a class="dropdown-item" href="app-chat.html"><i class="bx bx-message mr-50"></i> گفتگو ها</a>
-                                    <div class="dropdown-divider mb-0"></div><a class="dropdown-item" asp-area="Identity" asp-page="/Account/Login"><i class="bx bx-power-off mr-50"></i> خروج</a>
+                                    <div class="dropdown-divider mb-0"></div><a class="dropdown-item" asp-area="Identity" asp-page="/Account/Logout"><i class="bx bx-power-off mr-50"></i> خروج</a>
                                 </div>
                             </li>
                         </ul>
